# bonner-libraries

./: README.md  environment.yml  pyproject.toml  reference.bib
docs/: conf.py  references.bib
docs/pages/: brainio_api_reference.rst  brainio_todo.rst  brainio_user_guide.rst  caching-index.rst  computation-index.rst  models-index.rst  todo.rst  user_guide.rst
docs/pages/api/: bonner.brainio.rst  bonner.caching.rst  bonner.computation.rst  bonner.models.rst
src/bonner/brainio/: __init__.py  _catalog.py  _network.py  _utilities.py  _utils.py
src/bonner/caching/: __init__.py  _cacher.py  _handlers.py
src/bonner/computation/: cka.py  cuda.py  rsa.py  statistics.py  xarray.py
src/bonner/computation/decomposition/: __init__.py  _cca.py  _cv_pca.py  _cvpca.py  _nmf.py  _pca.py  _plssvd.py  _svca.py  _svd.py  _utilities.py
src/bonner/computation/metrics/: __init__.py  _corrcoef.py  _r2_score.py
src/bonner/computation/normalization/: __init__.py  _center.py  _z_score.py
src/bonner/computation/regression/: __init__.py  _definition.py  _linear_regression.py  _loo_cv_ridge.py  _pls_regression.py  _sgd_linear_regression.py  _utilities.py
src/bonner/datasets/_utilities/: __init__.py  _environment.py  nii.py
src/bonner/datasets/allen2021_natural_scenes/: __init__.py  _data.py  _stimuli.py  _transform.py  _utilities.py  _visualization.py
src/bonner/datasets/bonner2021_object2vec/: __init__.py  _data.py  _download.py  _stimuli.py
src/bonner/datasets/chang2019_bold5000/: _data.py  _download.py  _stimuli.py  _utilities.py
src/bonner/datasets/gifford2022_things_eeg_2/: __init__.py  _data.py
src/bonner/datasets/grootswagers2022_things_eeg/: __init__.py  _data.py
src/bonner/datasets/hebart2019_things/: __init__.py  _stimuli.py  _utilities.py
src/bonner/datasets/hebart2022_things_behavior/: __init__.py  _data.py
src/bonner/datasets/hebart2023_things_data/: __init__.py  _data.py  _utilities.py
src/bonner/datasets/hebart2023_things_meg/: __init__.py  _data.py
src/bonner/datasets/iarpa_microns/: __init__.py
src/bonner/datasets/stringer2019_mouse/: __init__.py  _data.py  _download.py  _utilities.py
src/bonner/files/: __init__.py  _download.py  _extract.py  _figshare.py  _google_drive.py  _s3.py  _utilities.py
src/bonner/models/datapipes/: __init__.py  _image.py
src/bonner/models/features/: __init__.py  _concatenate.py  _extract.py  _postprocess.py
src/bonner/models/hooks/: __init__.py  _definition.py  _flatten.py  _global_average_pool.py  _global_avgpool.py  _global_maxpool.py  _global_stdpool.py  _random_projection.py  _sparse_random_projection.py
src/bonner/models/utilities/: __init__.py  _environment.py
src/bonner/models/zoo/: __init__.py  _atlasnet.py  _barlow_twins.py  _ipcl.py  _model_zoo.py  _pytorch.py  _robustbench.py  _timm.py  _vgg16_places.py  _vgg16_robust.py  _vissl.py
src/bonner/plotting/: __init__.py  _colorbar.py  _defaults.py  _fonts.py  _nilearn.py  _normalize.py  _offsets.py  _savefig.py  _seaborn.py  _tiling.py  _transparency.py
tests/caching/: test_caching.py
tests/computation/: _test_cca.py  test_corrcoef.py  test_metrics.py  test_pca.py  test_regression.py  test_z_score.py
tests/models/: activations.py
